manifests/kamis/overlays/dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
